Fixed spacing with the button component home page

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -8,20 +8,22 @@
 }
 
 .iframe {
-    display: none;
+  display: none;
 }
 
 .form {
   display: grid;
   width: fit-content;
   grid-template-columns: 50% 50%;
-  gap: 2%;
+  gap: 4%;
 }
 
 .form-input {
   grid-column: 1;
+  width: 5vw;
 }
 
 .form-submit {
   grid-column: 2;
+  width: 5vw;
 }
