--- a/styles/button.module.css
+++ b/styles/button.module.css
@@ -5,6 +5,8 @@
     border: none;
     border-radius: 5px;
 
+    width: 5vw;
+
     transition-property: background;
     transition-duration: 0.3s;
     transition-timing-function: ease-in-out;
